# fiobot

./: .gitignore  Cargo.toml  README.md
.run/: Run fiobot.run.xml
migrations/2023-12-17-215521_accounts/: down.sql  up.sql
migrations/2023-12-22-150643_rules/: down.sql  up.sql
migrations/2024-03-07-225200_email/: down.sql  up.sql
src/: bot.rs  main.rs  schema.rs
src/account/: mod.rs  subcommands.rs
src/emails/: mod.rs  subcommands.rs
src/rules/: mod.rs  subcommands.rs
