[package]
name = "fiobot"
version = "0.1.0"
edition = "2021"
authors = ["Milan Stastny <milan@stastnej.ch>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
fiocz-rs = "0.2.0"
rust_decimal = { version = "1.33" }
rust_decimal_macros = "1.33.1"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
