[package]
name = "fiobot"
version = "0.1.0"
edition = "2021"
authors = ["Milan Stastny <milan@stastnej.ch>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
diesel = { version = "2.1", features = ["sqlite"] }
diesel_migrations = "2.1"
fiocz-rs = "0.2"
lettre = { version = "0.11", features = ["sendmail-transport", "file-transport"] }
prettytable-rs = "0.10"
rust_decimal = { version = "1" }
rust_decimal_macros = "1"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
